--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JobMojo - AI-Powered Job Search</title>
-    <meta name="description" content="Find your dream job with JobMojo's AI-powered job search platform" />
-    <meta name="author" content="JobMojo" />
+    <title>Total Recall.ai – AI-Powered Enterprise Platform</title>
+    <meta name="description" content="Total Recall.ai: AI-powered enterprise platform for documentation, analytics, and workflow automation." />
+    <meta name="author" content="Total Recall.ai" />
 
-    <meta property="og:title" content="JobMojo - AI-Powered Job Search" />
-    <meta property="og:description" content="Find your dream job with JobMojo's AI-powered job search platform" />
+    <meta property="og:title" content="Total Recall.ai – AI-Powered Enterprise Platform" />
+    <meta property="og:description" content="Total Recall.ai: AI-powered enterprise platform for documentation, analytics, and workflow automation." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@jobmojo_ai" />
+    <meta name="twitter:site" content="@totalrecall_ai" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
